--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -2,6 +2,40 @@
     position: fixed;
     display: flex;
     width: 100%;
-    height: 6em;
-    background-color: purple;
+    height: 4em;
+    background-color: #D8B4F8;
+    justify-content: space-between;
+    z-index: 10000;
+}
+.nav-main{
+    position: fixed;
+    display: flex;
+    width: 100%;
+    height: 4em;
+    background-color: #D8B4F8;
+    justify-content: space-between;
+    z-index: 10000;
+}
+.nav-slider{
+    position: fixed;
+    background-color: #D8B4F8;
+    height: 100vh;
+    width: 20em;
+    padding: 1em;
+    margin-top: 4em;
+    transform: translateX(-500px);
+    transition: all 0.5s;
+}
+
+.nav-slider.clicked{
+    transform: translateX(0px);
+    transition: all 0.5s;
+}
+
+.nav-logo{
+    display: flex; 
+}
+
+.nav-btn{
+    margin: auto 1em; 
 }
